Set registration opening in config file, use it for opening the registration and for rendering the date before the opening.

--- a/config/example-socrates-server-config.json
+++ b/config/example-socrates-server-config.json
@@ -2,5 +2,6 @@
 {
   "publicUrlPrefix": "http://www.socrates-conference.de",
   "secret": "secret",
-  "sessionkey": "socrates-conference.de"
+  "sessionkey": "socrates-conference.de",
+  "registrationOpensAt": "2015-04-28T19:00:00+0200"
 }
