--- a/config/example-socrates-server-config.json
+++ b/config/example-socrates-server-config.json
@@ -3,5 +3,6 @@
   "publicUrlPrefix": "http://www.socrates-conference.de",
   "secret": "secret",
   "sessionkey": "socrates-conference.de",
-  "registrationOpensAt": "2015-04-28T19:00:00+0200"
+  "registrationOpensAt": "2015-04-28T19:00:00+0200",
+  "registrationParam": "anotherSecret"
 }
