introducing eslint to socrates

--- a/config/example-crosssite-config.json
+++ b/config/example-crosssite-config.json
@@ -2,5 +2,5 @@
 {
   "softwerkskammerURL": "http://www.softwerkskammer.org",
   "socratesURL": "http://www.socrates-conference.de",
-  "jwt_secret": "my_very_secret"
+  "jwtSecret": "my_very_secret"
 }
