--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "grunt-contrib-jade": "0.14.1",
     "grunt-contrib-less": "1.0.0",
     "grunt-contrib-uglify": "0.8.0",
+    "grunt-eslint": "12.0.0",
     "grunt-jslint": "1.1.12",
     "grunt-karma": "0.10.1",
     "grunt-mocha-istanbul": "2.3.1",
