update docu for wikirepo and vagrant under windows

--- a/config/example-wikirepo-config.json
+++ b/config/example-wikirepo-config.json
@@ -1,5 +1,5 @@
 // to use these values, strip "example-" from the filename, delete this comment and replace the below values
-// MUST BE AN ABSOLUTE PATH
+// MUST BE AN ABSOLUTE PATH  to an initialized git repository containing at least one commit
 {
   "wikipath": "/absolute/path/to/initialized/git-repo"
 }
