--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "grunt-karma": "0.11.0",
     "grunt-mocha-istanbul": "2.4.0",
     "grunt-patch": "0.1.7",
+    "istanbul": "0.3.15",
     "karma": "0.12.36",
     "karma-coverage": "0.4.1",
     "karma-html2js-preprocessor": "0.1.0",
@@ -96,6 +97,8 @@
     "karma-phantomjs-launcher": "0.2.0",
     "karma-sinon": "1.0.4",
     "must": "0.12.0",
+    "mocha": "2.2.5",
+    "phantomjs": "1.9.17",
     "proxyquire": "1.5.0",
     "request": "2.57.0",
     "sinon": "1.15.3",
