--- a/package.json
+++ b/package.json
@@ -96,8 +96,8 @@
     "karma-must": "0.1.1",
     "karma-phantomjs-launcher": "0.2.0",
     "karma-sinon": "1.0.4",
-    "must": "0.12.0",
     "mocha": "2.2.5",
+    "must-dist": "0.12.0",
     "phantomjs": "1.9.17",
     "proxyquire": "1.5.0",
     "request": "2.57.0",
