--- a/bower.json
+++ b/bower.json
@@ -3,26 +3,16 @@
   "version": "1.0.0",
   "dependencies": {
     "autoNumeric": "1.9.30",
-    "bootstrap": "3.3.4",
-    "bootstrap-datepicker": "1.4.0",
-    "bootstrap-markdown": "2.9.0",
     "bootstrap-timepicker": "0.2.6",
-    "datatables": "1.10.7",
-    "font-awesome": "4.3.0",
     "jqcloud2": "2.0.1",
-    "jquery": "2.1.4",
     "jquery-guillotine": "1.3.0",
-    "jquery-validation": "1.13.1",
-    "mjolnic-bootstrap-colorpicker": "2.1.2",
     "select2": "4.0.0",
-    "select2-bootstrap-css": "1.4.6",
     "smartmenus": "0.9.7",
     "tinycolor": "1.1.1",
-    "tinygradient": "0.3.0",
-    "URIjs": "1.15.1"
+    "tinygradient": "0.3.0"
   },
   "resolutions": {
-    "bootstrap": "3.3.4",
+    "bootstrap": "3.3.5",
     "jquery": "2.1.4",
     "select2": "4.0.0",
     "tinycolor": "1.1.1"
