--- a/package.json
+++ b/package.json
@@ -30,15 +30,21 @@
   "dependencies": {
     "async": "1.2.1",
     "body-parser": "1.12.4",
+    "bootstrap": "3.3.5",
+    "bootstrap-colorpicker": "2.2.0",
+    "bootstrap-datepicker": "1.4.0",
+    "bootstrap-markdown": "2.9.0",
     "compression": "1.5.0",
     "connect-ensure-login": "0.1.1",
     "connect-mongostore": "0.1.4",
     "cookie-parser": "1.3.5",
     "CoolBeans": "0.0.9",
     "csurf": "1.8.3",
+    "datatables": "1.10.7",
     "express": "4.12.4",
     "express-session": "1.11.3",
     "ezmlm-node": "1.2.3",
+    "font-awesome": "4.3.0",
     "fullcalendar": "2.3.1",
     "glob": "5.0.10",
     "i18next": "1.9.0",
@@ -46,6 +52,8 @@
     "iconv": "2.1.8",
     "imagemagick": "0.1.3",
     "jade": "1.10.0",
+    "jquery": "2.1.4",
+    "jquery-validation": "1.13.1",
     "jwt-simple": "0.3.0",
     "lodash": "3.9.3",
     "mailparser": "0.5.1",
@@ -66,10 +74,12 @@
     "passport-openid": "0.3.1",
     "passport-openidconnect": "git://github.com/NicoleRauch/passport-openidconnect#master",
     "qr-image": "3.1.0",
+    "select2-bootstrap-css": "1.4.6",
     "serve-favicon": "2.2.1",
     "simple-configure": "0.1.6",
     "stripe": "3.5.0",
     "underscore.string": "3.1.1",
+    "URIjs": "1.15.1",
     "useragent": "2.1.6",
     "winston": "1.0.0",
     "winston-config": "0.4.2"
