--- a/bower.json
+++ b/bower.json
@@ -7,14 +7,9 @@
     "jqcloud2": "2.0.1",
     "jquery-guillotine": "1.3.0",
     "select2": "4.0.0",
-    "smartmenus": "0.9.7",
-    "tinycolor": "1.1.1",
-    "tinygradient": "0.3.0"
+    "smartmenus": "0.9.7"
   },
   "resolutions": {
-    "bootstrap": "3.3.5",
-    "jquery": "2.1.4",
-    "select2": "4.0.0",
-    "tinycolor": "1.1.1"
+    "jquery": "2.1.4"
   }
 }
