--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "imagemagick": "0.1.3",
     "jade": "1.10.0",
     "jquery": "2.1.4",
-    "jquery-validation": "1.13.1",
     "jwt-simple": "0.3.0",
     "lodash": "3.9.3",
     "mailparser": "0.5.1",
@@ -78,6 +77,8 @@
     "serve-favicon": "2.2.1",
     "simple-configure": "0.1.6",
     "stripe": "3.5.0",
+    "tinycolor2": "1.1.2",
+    "tinygradient": "0.3.0",
     "underscore.string": "3.1.1",
     "URIjs": "1.15.1",
     "useragent": "2.1.6",
