--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "autoNumeric": "1.9.30",
     "bootstrap-timepicker": "0.2.6",
     "jqcloud2": "2.0.1",
+    "jquery-validation": "1.13.1",
     "jquery-guillotine": "1.3.0",
     "select2": "4.0.0",
     "smartmenus": "0.9.7"
