clearly signal which of the servers sent an email

--- a/config/example(smtp)-mailsender-config.json
+++ b/config/example(smtp)-mailsender-config.json
@@ -8,5 +8,6 @@
     },
     "debug": "true"
   },
+  "sender-name": "Softwerkskammer Benachrichtigungen",
   "sender-address": "info@my-domain.org"
 }
