--- a/config/example-socrates-server-config.json
+++ b/config/example-socrates-server-config.json
@@ -1,7 +1,8 @@
-// to use these values, strip "example-" from the filename, delete this comment and replace the below values
+// to use these values, strip "example-socrates-" from the filename, delete this comment and replace the below values
 {
-  "publicUrlPrefix": "http://www.socrates-conference.de",
+  "publicUrlPrefix": "http://localhost:17224",
   "secret": "secret",
+  "domainname": "socrates-conference.de",
   "sessionkey": "socrates-conference.de",
   "registrationOpensAt": "2015-04-28T19:00:00+0200",
   "registrationParam": "anotherSecret"
