--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,6 @@
     "jqcloud2": "2.0.1",
     "jquery-validation": "1.13.1",
     "jquery-guillotine": "1.3.0",
-    "select2": "4.0.0",
-    "smartmenus": "0.9.7"
+    "select2": "4.0.0"
   }
 }
