--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "imagemagick": "0.1.3",
     "jade": "1.11.0",
     "jquery": "2.1.4",
+    "jquery-validation": "1.14.0",
     "jwt-simple": "0.3.0",
     "lodash": "3.10.0",
     "mailparser": "0.5.1",
