--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "iconv": "2.1.8",
     "imagemagick": "0.1.3",
     "jade": "1.11.0",
+    "jqcloud-npm": "3.0.0",
     "jquery": "2.1.4",
     "jquery-validation": "1.14.0",
     "jwt-simple": "0.3.0",
