--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,6 @@
   "dependencies": {
     "autoNumeric": "1.9.30",
     "bootstrap-timepicker": "0.2.6",
-    "jquery-guillotine": "1.3.0",
-    "select2": "4.0.0"
+    "jquery-guillotine": "1.3.0"
   }
 }
