--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,6 @@
   "name": "agora-bower",
   "version": "1.0.0",
   "dependencies": {
-    "autoNumeric": "1.9.30",
-    "jquery-guillotine": "1.3.0"
+    "autoNumeric": "1.9.30"
   }
 }
