--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "async": "1.3.0",
+    "autonumeric": "1.9.38",
     "body-parser": "1.13.2",
     "bootstrap": "3.3.5",
     "bootstrap-colorpicker": "2.2.0",
@@ -88,7 +89,6 @@
   },
   "devDependencies": {
     "grunt": "0.4.5",
-    "grunt-bower-install-simple": "1.1.3",
     "grunt-cli": "0.1.13",
     "grunt-contrib-clean": "0.6.0",
     "grunt-contrib-copy": "0.8.0",
