--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "winston-config": "0.4.2"
   },
   "devDependencies": {
+    "chado": "0.1.5",
     "grunt": "0.4.5",
     "grunt-cli": "0.1.13",
     "grunt-contrib-clean": "0.6.0",
