--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "guillotine": "1.3.1",
     "i18next": "1.10.4",
     "icalendar": "0.7.1",
-    "iconv": "2.1.11",
+    "iconv-lite": "0.4.13",
     "imagemagick": "0.1.3",
     "jade": "1.11.0",
     "jqcloud-npm": "3.0.0",
