--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "node": ">0.10"
   },
   "dependencies": {
-    "async": "1.4.2",
-    "autonumeric": "1.9.39",
+    "async": "1.5.0",
+    "autonumeric": "1.9.42",
     "body-parser": "1.14.1",
     "bootstrap": "3.3.5",
-    "bootstrap-colorpicker": "2.2.0",
-    "bootstrap-datepicker": "1.4.1",
+    "bootstrap-colorpicker": "2.3.0",
+    "bootstrap-datepicker": "1.5.0",
     "bootstrap-markdown": "2.9.0",
     "compression": "1.6.0",
     "connect-ensure-login": "0.1.1",
@@ -39,13 +39,13 @@
     "datatables": "1.10.9",
     "drmonty-smartmenus": "0.9.7",
     "express": "4.13.3",
-    "express-session": "1.11.3",
+    "express-session": "1.12.1",
     "ezmlm-node": "1.2.3",
     "font-awesome": "4.4.0",
     "fullcalendar": "2.4.0",
-    "glob": "5.0.15",
+    "glob": "6.0.1",
     "guillotine": "1.3.1",
-    "i18next": "1.10.4",
+    "i18next": "1.10.6",
     "icalendar": "0.7.1",
     "iconv-lite": "0.4.13",
     "imagemagick": "0.1.3",
@@ -54,21 +54,22 @@
     "jquery": "2.1.4",
     "jquery-validation": "1.14.0",
     "jwt-simple": "0.3.1",
+    "kerberos": "0.0.17",
     "lodash": "3.10.1",
-    "mailparser": "0.5.2",
+    "mailparser": "0.5.3",
     "marked": "0.3.5",
     "mime-types": "2.1.7",
     "moment-timezone": "0.4.1",
-    "mongodb": "2.0.45",
+    "mongodb": "2.0.49",
     "morgan": "1.6.1",
     "multiparty": "4.1.2",
     "node-cache": "3.0.0",
     "node-html-encoder": "0.0.2",
     "node-syntaxhighlighter": "0.8.1",
-    "node-uuid": "1.4.3",
-    "nodemailer": "1.8.0",
+    "node-uuid": "1.4.7",
+    "nodemailer": "1.10.0",
     "numeral": "1.5.3",
-    "passport": "0.3.0",
+    "passport": "0.3.2",
     "passport-github": "1.0.0",
     "passport-openid": "0.4.0",
     "openidconnect-for-passport": "0.0.2",
@@ -82,38 +83,38 @@
     "tinycolor2": "1.1.2",
     "tinygradient": "0.3.0",
     "underscore.string": "3.2.2",
-    "urijs": "1.16.1",
+    "urijs": "1.17.0",
     "useragent": "2.1.7",
-    "winston": "1.1.0",
+    "winston": "2.1.1",
     "winston-config": "0.4.2"
   },
   "devDependencies": {
-    "chado": "0.2.2",
+    "chado": "0.2.3",
     "grunt": "0.4.5",
     "grunt-cli": "0.1.13",
-    "grunt-contrib-clean": "0.6.0",
-    "grunt-contrib-copy": "0.8.1",
+    "grunt-contrib-clean": "0.7.0",
+    "grunt-contrib-copy": "0.8.2",
     "grunt-contrib-jade": "0.15.0",
-    "grunt-contrib-less": "1.0.1",
-    "grunt-contrib-uglify": "0.9.2",
-    "grunt-eslint": "17.2.0",
+    "grunt-contrib-less": "1.1.0",
+    "grunt-contrib-uglify": "0.11.0",
+    "grunt-eslint": "17.3.1",
     "grunt-karma": "0.12.1",
     "grunt-mocha-istanbul": "3.0.1",
     "grunt-patch": "0.1.7",
-    "istanbul": "0.3.21",
-    "karma": "0.13.10",
-    "karma-coverage": "0.5.2",
+    "istanbul": "0.4.0",
+    "karma": "0.13.15",
+    "karma-coverage": "0.5.3",
     "karma-html2js-preprocessor": "0.1.0",
-    "karma-mocha": "0.2.0",
+    "karma-mocha": "0.2.1",
     "karma-must": "0.1.1",
     "karma-phantomjs-launcher": "0.2.1",
     "karma-sinon": "1.0.4",
-    "mocha": "2.3.3",
+    "mocha": "2.3.4",
     "must-dist": "0.12.0",
     "phantomjs": "1.9.18",
-    "proxyquire": "1.7.2",
-    "request": "2.63.0",
-    "sinon": "1.17.0",
+    "proxyquire": "1.7.3",
+    "request": "2.67.0",
+    "sinon": "1.17.2",
     "supertest": "1.1.0"
   },
   "scripts": {
