--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "fullcalendar": "2.5.0",
     "glob": "6.0.1",
     "guillotine": "1.3.1",
-    "i18next": "1.10.6",
+    "i18next": "2.0.4",
+    "i18next-express-middleware": "0.1.0",
+    "i18next-node-fs-backend": "0.0.6",
     "icalendar": "0.7.1",
     "iconv-lite": "0.4.13",
     "imagemagick": "0.1.3",
