--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "lodash": "3.10.1",
     "mailparser": "0.5.3",
     "marked": "0.3.5",
+    "memwatch-next": "0.2.10",
     "mime-types": "2.1.9",
     "moment-timezone": "0.5.0",
     "mongodb": "2.1.3",
