--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "fullcalendar": "2.5.0",
     "glob": "6.0.1",
     "guillotine": "1.3.1",
+    "heapdump": "0.3.7",
     "i18next": "2.0.17",
     "i18next-express-middleware": "0.1.2",
     "i18next-intervalplural-postprocessor": "0.0.8",
@@ -73,10 +74,10 @@
     "node-uuid": "1.4.7",
     "nodemailer": "1.11.0",
     "numeral": "1.5.3",
+    "openidconnect-for-passport": "0.0.2",
     "passport": "0.3.2",
     "passport-github": "1.0.0",
     "passport-openid": "0.4.0",
-    "openidconnect-for-passport": "0.0.2",
     "qr-image": "3.1.0",
     "select2": "4.0.1",
     "select2-bootstrap-css": "1.4.6",
