--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "passport-github": "1.1.0",
     "passport-openid": "0.4.0",
     "qr-image": "3.1.0",
+    "ramda": "0.19.1",
     "select2": "4.0.1",
     "select2-bootstrap-css": "1.4.6",
     "serve-favicon": "2.3.0",
