--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,6 @@
     "no-array-constructor": 2,
     "no-caller": 2,
     "no-catch-shadow": 2,
-    "no-empty-label": 2,
     "no-eval": 2,
     "no-extend-native": 2,
     "no-extra-bind": 2,
@@ -44,7 +43,7 @@
     "no-with": 2,
     "camelcase": 2,
     "comma-spacing": 2,
-    "consistent-return": 2,
+    "consistent-return": 1,
     "curly": [2, "all"],
     "dot-notation": [2, { "allowKeywords": true }],
     "eol-last": 2,
@@ -56,7 +55,7 @@
     "semi": 2,
     "semi-spacing": [2, {"before": false, "after": true}],
     "space-infix-ops": 2,
-    "space-return-throw-case": 2,
+    "keyword-spacing": 2,
     "space-unary-ops": [2, { "words": true, "nonwords": false }],
     "strict": [2, "global"],
     "yoda": [2, "never"]
