--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
     "supertest": "1.2.0"
   },
   "scripts": {
-    "start": "node softwerkskammer/start",
+    "start": "node start-softwerkskammer",
     "test": "grunt tests && grunt --gruntfile Gruntfile-SoCraTes.js tests",
     "prepublish": "git log -1 --pretty=\"format:a(href='https://github.com/softwerkskammer/Agora/commit/%H', target='_blank')%n i.fa.fa-github.fa-fw%n | &nbsp;Version: %h\" > softwerkskammer/version.jade"
   }
