--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "guillotine": "1.3.1",
     "i18next": "2.3.5",
     "i18next-express-middleware": "0.3.2",
+    "heapdump": "0.3.7",
     "i18next-intervalplural-postprocessor": "0.2.2",
     "i18next-node-fs-backend": "0.1.0",
     "icalendar": "0.7.1",
