--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "compression": "1.6.1",
     "connect-ensure-login": "0.1.1",
     "connect-mongo": "1.1.0",
+    "cookie-parser": "1.4.1",
     "CoolBeans": "0.0.9",
     "csurf": "1.8.3",
     "datatables": "1.10.11",
