--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "marked": "0.3.5",
     "memwatch-next": "0.2.10",
     "mime-types": "2.1.10",
+    "moment": "2.13.0",
     "moment-timezone": "0.5.2",
     "mongodb": "2.1.7",
     "morgan": "1.7.0",
