--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node": ">0.10"
   },
   "dependencies": {
+    "CoolBeans": "0.0.9",
     "async": "1.5.2",
     "autonumeric": "1.9.43",
     "body-parser": "1.15.0",
@@ -34,7 +35,6 @@
     "connect-ensure-login": "0.1.1",
     "connect-mongo": "1.1.0",
     "cookie-parser": "1.4.1",
-    "CoolBeans": "0.0.9",
     "csurf": "1.8.3",
     "datatables": "1.10.11",
     "drmonty-smartmenus": "0.9.7",
@@ -45,9 +45,9 @@
     "fullcalendar": "2.6.1",
     "glob": "7.0.3",
     "guillotine": "1.3.1",
+    "heapdump": "0.3.7",
     "i18next": "2.3.5",
     "i18next-express-middleware": "0.3.2",
-    "heapdump": "0.3.7",
     "i18next-intervalplural-postprocessor": "0.2.2",
     "i18next-node-fs-backend": "0.1.0",
     "icalendar": "0.7.1",
@@ -69,6 +69,7 @@
     "mongodb": "2.1.7",
     "morgan": "1.7.0",
     "multiparty": "4.1.2",
+    "node-cache": "3.2.1",
     "node-html-encoder": "0.0.2",
     "node-syntaxhighlighter": "0.8.1",
     "node-uuid": "1.4.7",
