--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ services:
 # Use faster Docker architecture on Travis. (http://blog.travis-ci.com/2014-12-17-faster-builds-with-container-based-infrastructure/)
 sudo: false
 
+notifications:
+    slack: softwarecraftsmanship:AJPQ1HMqrsg2dEV5js9qt4rc
+
 env:
   - CXX=g++-4.8
 addons:
