--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
     "karma-sinon": "1.0.4",
     "mocha": "2.4.5",
     "must-dist": "0.12.0",
-    "phantomjs-prebuilt": "2.1.5",
+    "phantomjs-prebuilt": ">2.1.5",
     "proxyquire": "1.7.4",
     "request": "2.69.0",
     "sinon": "1.17.3",
