--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "csurf": "1.8.3",
     "datatables.net": "1.10.11",
     "datatables.net-bs": "1.10.11",
+    "datatables.net-dt": "1.10.11",
     "drmonty-smartmenus": "0.9.7",
     "express": "4.13.4",
     "express-session": "1.13.0",
