--- a/config/example-socrates-mailsender-config.json
+++ b/config/example-socrates-mailsender-config.json
@@ -1,4 +1,5 @@
 // to use this variant, strip "example-socrates-" from the filename, delete this comment and adapt the settings below
 {
-  "sender-name": "SoCraTes Notifications"
+  "sender-name": "SoCraTes Notifications",
+  "registrationListEmailAddress": "info@socrates-conference.de"
 }
