Fix typo in project description

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Agora",
-  "description": "The plattform for Softwerkskammer",
+  "description": "The platform for Softwerkskammer",
   "version": "1.0.0",
   "author": "Nicole Rauch",
   "contributors ": [
