Revert "remove dependency to fork by original for "grunt-patch""
This reverts commit 1c7c5d2d4a33026f99b3dd218bad1838fdbca883.

--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     "grunt-eslint": "18.1.0",
     "grunt-karma": "2.0.0",
     "grunt-mocha-istanbul": "4.0.2",
-    "grunt-patch": "1.0.0",
+    "grunt-patch": "leider/grunt-patch",
     "istanbul": "0.4.3",
     "karma": "0.13.22",
     "karma-coverage": "1.0.0",
