--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 
 node_js:
-  - "6"
+  - "6.1"
 
 before_script:
   - npm install -g grunt-cli
@@ -15,3 +15,11 @@ sudo: false
 notifications:
     slack: softwarecraftsmanship:AJPQ1HMqrsg2dEV5js9qt4rc
 
+env:
+  - CXX=g++-4.8
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
