--- a/config/example-socrates-server-config.json
+++ b/config/example-socrates-server-config.json
@@ -5,5 +5,6 @@
   "domainname": "socrates-conference.de",
   "sessionkey": "socrates-conference.de",
   "registrationOpensAt": "2015-04-28T19:00:00+0200",
-  "registrationParam": "anotherSecret"
+  "registrationParam": "anotherSecret",
+  "nametags": "orcana"
 }
