--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,35 @@
 language: node_js
 
-node_js:
-  - "6.1"
-
-before_script:
-  - npm install -g grunt-cli
-
-services:
-  - mongodb
-
 # Use faster Docker architecture on Travis. (http://blog.travis-ci.com/2014-12-17-faster-builds-with-container-based-infrastructure/)
 sudo: false
 
 notifications:
     slack: softwarecraftsmanship:AJPQ1HMqrsg2dEV5js9qt4rc
 
-env:
-  - CXX=g++-4.8
 addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
     packages:
       - g++-4.8
+
+# Run the build twice, once with mongodb 2 and 3
+# run for mongo 3 requires mongodb service to pull in all dependencies
+matrix:
+  include:
+  - node_js: "6.1"
+    env: CXX=g++-4.8
+    services:
+    - mongodb
+    before_script:
+      - npm install -g grunt-cli
+      - mongod --version
+  - node_js: "6.1"
+    env: CXX=g++-4.8 MONGODB=3.2.9
+    before_script:
+      - wget http://fastdl.mongodb.org/linux/mongodb-linux-x86_64-ubuntu1204-${MONGODB}.tgz -O /tmp/mongodb.tgz
+      - tar -xvf /tmp/mongodb.tgz
+      - mkdir /tmp/data
+      - ./mongodb-linux-x86_64-ubuntu1204-${MONGODB}/bin/mongod --version
+      - ./mongodb-linux-x86_64-ubuntu1204-${MONGODB}/bin/mongod --dbpath /tmp/data --bind_ip 127.0.0.1 &> /dev/null &
+      - npm install -g grunt-cli
