Teach ESLint to accept the object spread operator.

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,10 @@
 {
   "extends": "eslint:recommended",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "experimentalObjectRestSpread": true
+    }
+  },
   "env": {
     "node": true,
     "es6": true
