--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "grunt-eslint": "19.0.0",
     "grunt-karma": "2.0.0",
     "grunt-mocha-istanbul": "5.0.2",
-    "grunt-patch": "leider/grunt-patch",
+    "grunt-patcher": "1.0.0",
     "grunt-puglint": "1.0.0",
     "istanbul": "0.4.5",
     "karma": "1.3.0",
