--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 *~
 .DS_Store
 
-.idea/codeStyleSettings.xml
+# .idea/codeStyleSettings.xml
 .idea/dictionaries
 .idea/jsLibraryMappings.xml
 .idea/modules.xml
