--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "icalendar": "0.7.1",
     "iconv-lite": "0.4.13",
     "imagemagick": "0.1.3",
-    "jqcloud-npm": "3.1.0",
+    "jqcloud2": "2.0.2",
     "jquery": "3.1.1",
     "jquery-validation": "1.15.1",
     "jwt-simple": "0.5.0",
