--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "csurf": "1.9.0",
     "datatables.net": "1.10.12",
     "datatables.net-bs": "1.10.12",
-    "datatables.net-dt": "1.10.12",
     "drmonty-smartmenus": "0.9.7",
     "express": "4.14.0",
     "express-session": "1.14.1",
@@ -58,6 +57,7 @@
     "jquery": "3.1.1",
     "jquery-validation": "1.15.1",
     "jwt-simple": "0.5.0",
+    "less-plugin-clean-css": "1.5.1",
     "lodash": "4.16.4",
     "mailparser": "0.6.1",
     "marked": "0.3.6",
