--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "icalendar": "0.7.1",
     "iconv-lite": "0.4.15",
     "imagemagick": "0.1.3",
+    "intl": "1.2.5",
+    "intl-locales-supported": "1.0.0",
     "jqcloud2": "2.0.2",
     "jquery": "3.1.1",
     "jquery-validation": "1.16.0",
@@ -64,15 +66,14 @@
     "mime-types": "2.1.13",
     "moment": "2.17.1",
     "moment-timezone": "0.5.10",
-    "mongodb": "2.2.12",
+    "mongodb": "2.2.15",
     "morgan": "1.7.0",
     "multiparty": "4.1.2",
     "node-cache": "4.1.0",
     "node-html-encoder": "0.0.2",
     "node-syntaxhighlighter": "0.8.1",
     "node-uuid": "1.4.7",
-    "nodemailer": "2.6.4",
-    "numeral": "1.5.6",
+    "nodemailer": "2.7.0",
     "openidconnect-for-passport": "0.0.3",
     "passport": "0.3.2",
     "passport-github": "1.1.0",
