--- a/package.json
+++ b/package.json
@@ -24,50 +24,50 @@
   },
   "dependencies": {
     "CoolBeans": "0.0.9",
-    "async": "2.3.0",
+    "async": "2.5.0",
     "autonumeric": "2.0.12",
-    "body-parser": "1.17.1",
+    "body-parser": "1.17.2",
     "bootstrap": "3.3.7",
     "bootstrap-colorpicker": "2.5.1",
-    "bootstrap-datepicker": "1.6.4",
+    "bootstrap-datepicker": "1.7.0",
     "bootstrap-markdown": "2.10.0",
     "compression": "1.6.2",
     "connect-ensure-login": "0.1.1",
     "connect-mongo": "1.3.2",
     "cookie-parser": "1.4.3",
     "csurf": "1.9.0",
-    "datatables.net": "1.10.13",
-    "datatables.net-bs": "1.10.13",
+    "datatables.net": "1.10.15",
+    "datatables.net-bs": "1.10.15",
     "drmonty-smartmenus": "0.9.7",
-    "express": "4.15.2",
-    "express-session": "1.15.2",
+    "express": "4.15.3",
+    "express-session": "1.15.3",
     "ezmlm-node": "1.2.3",
     "font-awesome": "4.7.0",
     "fullcalendar": "3.3.1",
-    "glob": "7.1.1",
+    "glob": "7.1.2",
     "guillotine": "1.3.1",
-    "i18next": "7.2.2",
-    "i18next-express-middleware": "1.0.4",
+    "i18next": "8.4.2",
+    "i18next-express-middleware": "1.0.5",
     "i18next-intervalplural-postprocessor": "1.0.0",
-    "i18next-node-fs-backend": "0.1.3",
+    "i18next-node-fs-backend": "1.0.0",
     "icalendar": "0.7.1",
-    "iconv-lite": "0.4.15",
+    "iconv-lite": "0.4.18",
     "imagemagick": "0.1.3",
     "intl": "1.2.5",
     "intl-locales-supported": "1.0.0",
-    "jqcloud2": "2.0.2",
+    "jqcloud2": "2.0.3",
     "jquery": "3.2.1",
     "jquery-validation": "1.16.0",
     "jwt-simple": "0.5.1",
-    "leaflet": "1.0.3",
+    "leaflet": "1.1.0",
     "less-plugin-clean-css": "1.5.1",
-    "mailparser": "2.0.3",
+    "mailparser": "2.0.5",
     "marked": "0.3.6",
     "mime-types": "2.1.15",
     "moment": "2.18.1",
     "moment-timezone": "0.5.13",
-    "mongodb": "2.2.25",
-    "morgan": "1.8.1",
+    "mongodb": "2.2.29",
+    "morgan": "1.8.2",
     "multiparty": "4.1.3",
     "node-cache": "4.1.1",
     "node-html-encoder": "0.0.2",
@@ -77,22 +77,22 @@
     "passport": "0.3.2",
     "passport-github": "1.1.0",
     "passport-openid": "0.4.0",
-    "pug": "2.0.0-beta11",
+    "pug": "2.0.0-rc.2",
     "qr-image": "3.2.0",
-    "ramda": "0.23.0",
+    "ramda": "0.24.1",
     "request": "2.81.0",
     "select2": "4.0.3",
     "select2-bootstrap-theme": "0.1.0-beta.10",
-    "serve-favicon": "2.4.2",
+    "serve-favicon": "2.4.3",
     "simple-configure": "0.1.6",
     "simple-timepicker": "1.1.1",
-    "stripe": "4.18.0",
+    "stripe": "4.23.1",
     "tinycolor2": "1.4.1",
     "tinygradient": "0.3.1",
     "underscore.string": "3.3.4",
     "urijs": "1.18.10",
     "useragent": "2.1.13",
-    "uuid": "3.0.1",
+    "uuid": "3.1.0",
     "winston": "2.3.1",
     "winston-config": "0.5.1"
   },
@@ -104,25 +104,25 @@
     "grunt-contrib-copy": "1.0.0",
     "grunt-contrib-less": "1.4.1",
     "grunt-contrib-pug": "1.0.0",
-    "grunt-contrib-uglify": "2.3.0",
-    "grunt-eslint": "19.0.0",
+    "grunt-contrib-uglify": "3.0.1",
+    "grunt-eslint": "20.0.0",
     "grunt-karma": "2.0.0",
     "grunt-mocha-istanbul": "5.0.2",
     "grunt-patcher": "1.0.0",
     "grunt-puglint": "1.0.0",
     "istanbul": "0.4.5",
-    "karma": "1.6.0",
+    "karma": "1.7.0",
     "karma-coverage": "1.1.1",
     "karma-html2js-preprocessor": "1.1.0",
     "karma-mocha": "1.3.0",
     "karma-must": "0.1.1",
     "karma-phantomjs-launcher": "1.0.4",
     "karma-sinon": "1.0.5",
-    "mocha": "3.2.0",
+    "mocha": "3.4.2",
     "must-dist": "0.12.0",
     "phantomjs-prebuilt": ">2.1.5",
-    "proxyquire": "1.7.11",
-    "sinon": "2.1.0",
+    "proxyquire": "1.8.0",
+    "sinon": "2.3.6",
     "supertest": "3.0.0"
   },
   "scripts": {
