--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "CoolBeans": "0.0.9",
+    "ajv": "5.4.0",
     "async": "2.5.0",
     "autonumeric": "2.0.12",
     "body-parser": "1.17.2",
@@ -66,7 +67,7 @@
     "mime-types": "2.1.17",
     "moment": "2.18.1",
     "moment-timezone": "0.5.13",
-    "mongodb": "2.2.31",
+    "mongodb": "2.2.33",
     "morgan": "1.8.2",
     "multiparty": "4.1.3",
     "node-cache": "4.1.1",
