--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "express": "4.16.2",
     "express-session": "1.15.6",
     "ezmlm-node": "1.2.3",
+    "feed": "1.1.1",
     "font-awesome": "4.7.0",
     "fullcalendar": "3.8.2",
     "glob": "7.1.2",
