--- a/package.json
+++ b/package.json
@@ -129,7 +129,7 @@
   },
   "scripts": {
     "start": "node start-softwerkskammer",
-    "test": "grunt tests && grunt --gruntfile Gruntfile-SoCraTes.js tests",
+    "test": "grunt tests",
     "prepublish": "git log -1 --pretty=\"format:a(href='https://github.com/softwerkskammer/Agora/commit/%H', target='_blank')%n i.fa.fa-github.fa-fw%n | &nbsp;Version: %h\" > softwerkskammer/version.pug"
   }
 }
