--- a/.eslintrc
+++ b/.eslintrc
@@ -35,9 +35,10 @@
     "no-octal-escape": 2,
     "no-process-exit": 2,
     "no-proto": 2,
+    "no-restricted-syntax": ["error", "SequenceExpression"],
     "no-return-assign": 2,
     "no-script-url": 2,
-    "no-sequences": 2,
+    "no-sequences": "error",
     "no-shadow": 2,
     "no-shadow-restricted-names": 2,
     "no-spaced-func": 2,
