--- a/.travis.yml
+++ b/.travis.yml
@@ -17,12 +17,9 @@ matrix:
     before_script:
       - npm install -g grunt-cli
       - mongod --version
-  - node_js: "6.5"
-    env: MONGODB=3.2.9
+  - node_js: "10.1.0"
+    services:
+    - mongodb
     before_script:
-      - wget http://fastdl.mongodb.org/linux/mongodb-linux-x86_64-ubuntu1204-${MONGODB}.tgz -O /tmp/mongodb.tgz
-      - tar -xvf /tmp/mongodb.tgz
-      - mkdir /tmp/data
-      - ./mongodb-linux-x86_64-ubuntu1204-${MONGODB}/bin/mongod --version
-      - ./mongodb-linux-x86_64-ubuntu1204-${MONGODB}/bin/mongod --dbpath /tmp/data --bind_ip 127.0.0.1 &> /dev/null &
       - npm install -g grunt-cli
+      - mongod --version
