--- a/config-examples/authentication-config.json
+++ b/config-examples/authentication-config.json
@@ -6,5 +6,6 @@
   "secretPaymentKey": "<put here from stripe.com>",
   "paymentBic"      : "",
   "paymentIban"     : "",
-  "paymentReceiver" : ""
+  "paymentReceiver" : "",
+  "magicLinkSecret" : ""
 }
