--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "jqcloud2": "2.0.3",
     "jquery": "3.3.1",
     "jquery-validation": "1.17.0",
+    "jsonwebtoken": "8.2.1",
     "leaflet": "1.3.1",
     "less-plugin-clean-css": "1.5.1",
     "marked": "0.4.0",
@@ -76,6 +77,7 @@
     "passport": "0.4.0",
     "passport-github": "1.1.0",
     "passport-openid": "0.4.0",
+    "passport-strategy": "1.0.0",
     "pug": "2.0.3",
     "qr-image": "3.2.0",
     "ramda": "0.25.0",
