--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "CoolBeans": "0.0.9",
     "async": "2.6.1",
     "autonumeric": "2.0.12",
+    "awesome-bootstrap-checkbox": "1.0.1",
     "body-parser": "1.18.3",
-    "bootstrap": "3.3.7",
+    "bootstrap": "4.1.3",
     "bootstrap-colorpicker": "2.5.2",
     "bootstrap-datepicker": "1.8.0",
     "bootstrap-markdown": "2.10.0",
@@ -77,12 +78,13 @@
     "passport-github": "1.1.0",
     "passport-openid": "0.4.0",
     "passport-strategy": "1.0.0",
+    "popper.js": "1.14.4",
     "pug": "2.0.3",
     "qr-image": "3.2.0",
     "ramda": "0.25.0",
     "request": "2.88.0",
     "select2": "4.0.5",
-    "select2-bootstrap-theme": "0.1.0-beta.10",
+    "select2-theme-bootstrap4": "0.2.0-beta.2",
     "serve-favicon": "2.5.0",
     "simple-configure": "0.1.6",
     "simple-timepicker": "1.1.1",
@@ -102,8 +104,9 @@
     "grunt-cli": "1.3.1",
     "grunt-contrib-clean": "1.1.0",
     "grunt-contrib-copy": "1.0.0",
-    "grunt-contrib-less": "2.0.0",
+    "grunt-contrib-cssmin": "3.0.0",
     "grunt-contrib-pug": "1.0.0",
+    "grunt-contrib-sassjs": "0.1.8",
     "grunt-contrib-uglify": "3.4.0",
     "grunt-eslint": "21.0.0",
     "grunt-karma": "2.0.0",
@@ -118,7 +121,6 @@
     "karma-must": "0.1.1",
     "karma-phantomjs-launcher": "1.0.4",
     "karma-sinon": "1.0.5",
-    "less-plugin-clean-css": "1.5.1",
     "mocha": "5.2.0",
     "must-dist": "0.12.0",
     "phantomjs-prebuilt": ">2.1.5",
