--- a/package.json
+++ b/package.json
@@ -132,6 +132,6 @@
   "scripts": {
     "start": "node start-softwerkskammer",
     "test": "grunt tests",
-    "prepare": "git log -1 --pretty=\"format:a.dropdown-item.nav-link(href='https://github.com/softwerkskammer/Agora/commit/%H', target='_blank')%n i.fa.fa-github.fa-fw%n | &nbsp;Version: %h\" > softwerkskammer/version.pug"
+    "prepare": "git log -1 --pretty=\"format:a.dropdown-item.nav-link(href='https://github.com/softwerkskammer/Agora/commit/%H', target='_blank')%n i.fab.fa-github.fa-fw%n | &nbsp;Version: %h\" > softwerkskammer/version.pug"
   }
 }
