--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "CoolBeans": "0.0.9",
+    "ajv": "6.5.4",
     "async": "2.6.1",
     "awesome-bootstrap-checkbox": "1.0.1",
     "body-parser": "1.18.3",
@@ -48,7 +49,7 @@
     "glob": "7.1.3",
     "guillotine": "1.3.1",
     "i18next": "11.9.0",
-    "i18next-express-middleware": "1.3.2",
+    "i18next-express-middleware": "1.4.0",
     "i18next-intervalplural-postprocessor": "1.0.2",
     "i18next-node-fs-backend": "2.1.0",
     "icalendar": "0.7.1",
@@ -61,7 +62,7 @@
     "jquery-validation": "1.18.0",
     "jsonwebtoken": "8.3.0",
     "leaflet": "1.3.4",
-    "marked": "0.5.0",
+    "marked": "0.5.1",
     "mime-types": "2.1.20",
     "moment": "2.22.2",
     "moment-timezone": "0.5.21",
@@ -124,7 +125,7 @@
     "must-dist": "0.12.0",
     "phantomjs-prebuilt": ">2.1.5",
     "proxyquire": "2.1.0",
-    "sinon": "6.3.3",
+    "sinon": "6.3.4",
     "supertest": "3.3.0"
   },
   "scripts": {
