--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "karma": "3.1.1",
     "karma-coverage": "1.1.2",
     "karma-html2js-preprocessor": "1.1.0",
+    "karma-intl-shim": "1.0.3",
     "karma-mocha": "1.3.0",
     "karma-must": "0.1.1",
     "karma-phantomjs-launcher": "1.0.4",
