--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "express-session": "1.15.6",
     "ezmlm-node": "1.2.3",
     "feed": "2.0.1",
-    "fullcalendar": "3.9.0",
+    "fullcalendar": "4.0.0-alpha.2",
     "glob": "7.1.3",
     "guillotine": "1.3.1",
     "i18next": "12.1.0",
