--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "jquery-validation": "1.18.0",
     "jsonwebtoken": "8.4.0",
     "leaflet": "1.3.4",
+    "luxon": "1.8.0",
     "marked": "0.5.2",
     "mime-types": "2.1.21",
     "moment": "2.22.2",
