parsing dates in wiki events done right now

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ dev-goodies
 !dev-goodies/icon_WebStorm.png
 !dev-goodies/mongo snippets.txt
 
+swk/
+
 **/build
 **/*coverage*
 **/fixtures/*.html
