--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "openidconnect-for-passport": "0.0.3",
     "passport": "0.4.0",
     "passport-github": "1.1.0",
+    "passport-local": "1.0.0",
     "passport-openid": "0.4.0",
     "passport-strategy": "1.0.0",
     "popper.js": "1.14.6",
