--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
   },
   "dependencies": {
     "CoolBeans": "0.0.9",
-    "@fortawesome/fontawesome-free": "5.6.3",
-    "async": "2.6.1",
+    "@fortawesome/fontawesome-free": "5.7.2",
+    "@fullcalendar/bootstrap": "4.0.0-beta.4",
+    "@fullcalendar/core": "4.0.0-beta.4",
+    "@fullcalendar/daygrid": "4.0.0-beta.4",
+    "async": "2.6.2",
     "awesome-bootstrap-checkbox": "1.0.1",
     "body-parser": "1.18.3",
     "bootstrap": "4.2.1",
@@ -35,19 +38,18 @@
     "compression": "1.7.3",
     "connect-ensure-login": "0.1.1",
     "connect-mongo": "2.0.3",
-    "cookie-parser": "1.4.3",
+    "cookie-parser": "1.4.4",
     "csurf": "1.9.0",
     "datatables.net": "1.10.19",
     "datatables.net-bs4": "1.10.19",
     "express": "4.16.4",
     "express-session": "1.15.6",
     "ezmlm-node": "1.2.3",
-    "feed": "2.0.2",
-    "fullcalendar": "4.0.0-alpha.4",
+    "feed": "2.0.4",
     "full-icu": "1.2.1",
     "glob": "7.1.3",
     "guillotine": "1.3.1",
-    "i18next": "14.0.1",
+    "i18next": "15.0.6",
     "i18next-express-middleware": "1.7.1",
     "i18next-intervalplural-postprocessor": "1.0.2",
     "i18next-node-fs-backend": "2.1.1",
@@ -59,11 +61,11 @@
     "jqcloud2": "2.0.3",
     "jquery": "3.3.1",
     "jquery-validation": "1.19.0",
-    "jsonwebtoken": "8.4.0",
+    "jsonwebtoken": "8.5.0",
     "leaflet": "1.4.0",
-    "luxon": "1.10.0",
-    "marked": "0.6.0",
-    "mime-types": "2.1.21",
+    "luxon": "1.11.4",
+    "marked": "0.6.1",
+    "mime-types": "2.1.22",
     "mongodb": "3.1.13",
     "morgan": "1.9.1",
     "multiparty": "4.2.1",
@@ -77,7 +79,7 @@
     "passport-local": "1.0.0",
     "passport-openid": "0.4.0",
     "passport-strategy": "1.0.0",
-    "popper.js": "1.14.6",
+    "popper.js": "1.14.7",
     "pug": "2.0.3",
     "qr-image": "3.2.0",
     "ramda": "0.26.1",
@@ -96,7 +98,7 @@
     "winston-config": "0.5.1"
   },
   "devDependencies": {
-    "ajv": "6.7.0",
+    "ajv": "6.10.0",
     "chado": "0.3.1",
     "grunt": "1.0.3",
     "grunt-cli": "1.3.2",
@@ -112,7 +114,7 @@
     "grunt-patcher": "1.0.0",
     "grunt-puglint": "1.0.0",
     "istanbul": "0.4.5",
-    "karma": "4.0.0",
+    "karma": "^4.0.1",
     "karma-coverage": "1.1.2",
     "karma-html2js-preprocessor": "1.1.0",
     "karma-intl-shim": "1.0.3",
@@ -120,12 +122,12 @@
     "karma-must": "0.1.1",
     "karma-phantomjs-launcher": "1.0.4",
     "karma-sinon": "1.0.5",
-    "mocha": "5.2.0",
+    "mocha": "6.0.2",
     "must-dist": "0.12.0",
     "phantomjs-prebuilt": ">2.1.5",
     "proxyquire": "2.1.0",
-    "sinon": "7.2.3",
-    "supertest": "3.4.2"
+    "sinon": "7.2.7",
+    "supertest": "4.0.0"
   },
   "scripts": {
     "start": "node --icu-data-dir=node_modules/full-icu start-softwerkskammer",
