--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,12 @@ notifications:
 # run for mongo 3 requires mongodb service to pull in all dependencies
 matrix:
   include:
+  - node_js: "8.10"
+    services:
+    - mongodb
+    before_script:
+      - npm install -g grunt-cli
+      - mongod --version
   - node_js: "10.1.0"
     services:
     - mongodb
