--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "async": "2.6.2",
     "awesome-bootstrap-checkbox": "1.0.1",
     "body-parser": "1.18.3",
-    "bootstrap": "4.2.1",
+    "bootstrap": "4.3.1",
     "bootstrap-colorpicker": "3.0.3",
     "bootstrap-datepicker": "1.8.0",
     "bootstrap-markdown": "2.10.0",
@@ -115,17 +115,17 @@
     "grunt-puglint": "1.0.0",
     "istanbul": "0.4.5",
     "karma": "^4.0.1",
+    "karma-chrome-launcher": "2.2.0",
     "karma-coverage": "1.1.2",
     "karma-html2js-preprocessor": "1.1.0",
     "karma-intl-shim": "1.0.3",
     "karma-mocha": "1.3.0",
     "karma-must": "0.1.1",
-    "karma-phantomjs-launcher": "1.0.4",
     "karma-sinon": "1.0.5",
     "mocha": "6.0.2",
     "must-dist": "0.12.0",
-    "phantomjs-prebuilt": ">2.1.5",
     "proxyquire": "2.1.0",
+    "puppeteer": "1.13.0",
     "sinon": "7.2.7",
     "supertest": "4.0.0"
   },
