istanbul as coverage solution is now unmaintained - replacing by actual solution

--- a/package.json
+++ b/package.json
@@ -106,10 +106,11 @@
     "grunt-contrib-uglify": "4.0.1",
     "grunt-eslint": "22.0.0",
     "grunt-karma": "3.0.2",
-    "grunt-mocha-istanbul": "5.0.2",
+    "grunt-mocha-test": "0.13.3",
+    "grunt-mocha-cli": "5.0.0",
     "grunt-patcher": "1.0.0",
     "grunt-puglint": "1.0.0",
-    "istanbul": "0.4.5",
+    "grunt-simple-nyc": "3.0.1",
     "karma": "4.4.1",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage": "2.0.1",
