--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "select2": "4.0.13",
     "select2-theme-bootstrap4": "0.2.0-beta.6",
     "serve-favicon": "2.5.0",
+    "sharp": "^0.25.2",
     "simple-configure": "0.1.6",
     "simple-timepicker": "1.1.1",
     "smartmenus": "1.1.0",
@@ -95,7 +96,6 @@
   },
   "devDependencies": {
     "ajv": "6.12.0",
-    "chado": "0.3.1",
     "grunt": "1.1.0",
     "grunt-cli": "1.3.2",
     "grunt-contrib-clean": "2.0.0",
