--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "datatables.net-bs4": "1.10.20",
     "express": "4.17.1",
     "express-session": "1.17.0",
+    "ezmlm-node": "2.0.0",
     "feed": "4.1.0",
     "full-icu": "1.3.1",
     "glob": "7.1.6",
