--- a/package.json
+++ b/package.json
@@ -24,9 +24,6 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.14.0",
-    "@fullcalendar/bootstrap": "4.4.0",
-    "@fullcalendar/core": "4.4.0",
-    "@fullcalendar/daygrid": "4.4.0",
     "CoolBeans": "0.0.9",
     "async": "3.2.0",
     "awesome-bootstrap-checkbox": "1.0.1",
@@ -47,11 +44,12 @@
     "ezmlm-node": "2.0.0",
     "feed": "4.2.1",
     "full-icu": "1.3.1",
+    "fullcalendar": "5.3.0",
     "glob": "7.1.6",
     "guillotine": "1.3.1",
-    "i18next": "19.7.0",
-    "i18next-express-middleware": "2.0.0",
-    "i18next-intervalplural-postprocessor": "2.0.2",
+    "i18next": "19.4.5",
+    "i18next-express-middleware": "1.9.1",
+    "i18next-intervalplural-postprocessor": "1.0.3",
     "i18next-node-fs-backend": "2.1.3",
     "icalendar": "0.7.1",
     "iconv-lite": "0.6.2",
