--- a/config-examples/mailsender-config.json
+++ b/config-examples/mailsender-config.json
@@ -8,5 +8,6 @@
     "debug": "true"
   },
   "sender-name": "Softwerkskammer Benachrichtigungen",
-  "sender-address": "info@my-domain.org"
+  "sender-address": "info@my-domain.org",
+  "include-mail-footer": false
 }
