redirect the logs from nodemailer to winston if debug is enabled

--- a/config-examples/winston-config.json
+++ b/config-examples/winston-config.json
@@ -56,6 +56,16 @@
         "level": "info"
       }
     },
+    "nodemailer": {
+      "file": {
+        "timestamp": true,
+        "json": false,
+        "filename": "log/nodemailer.log",
+        "maxFiles": 5,
+        "maxsize": 10485760,
+        "level": "silly"
+      }
+    },
     "socrates": {
       "console": {
         "level": "info",
