--- a/config-examples/mailsender-config.json
+++ b/config-examples/mailsender-config.json
@@ -5,7 +5,7 @@
       "user": "",
       "pass": ""
     },
-    "debug": "true"
+    "debug": true
   },
   "sender-name": "Softwerkskammer Benachrichtigungen",
   "sender-address": "info@my-domain.org",
