put grunt into own command

--- a/.github/workflows/agora-ci.yml
+++ b/.github/workflows/agora-ci.yml
@@ -22,7 +22,5 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - run: |
-          npm install
-          grunt
-
+      - run: npm install
+      - run: grunt
