build when pushing to master or on pull requests

--- a/.github/workflows/agora-ci.yml
+++ b/.github/workflows/agora-ci.yml
@@ -1,5 +1,11 @@
-name: GitHub Actions Demo
-on: [push]
+name: Agora Ci
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - '*'
 
 jobs:
   build:
