--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
     "feed": "4.2.2",
     "full-icu": "1.4.0",
     "fullcalendar": "5.11.0",
-    "glob": "7.2.0",
+    "glob": "8.0.1",
     "guillotine": "1.3.1",
-    "i18next": "21.6.14",
+    "i18next": "21.6.16",
     "i18next-http-middleware": "3.2.0",
     "i18next-intervalplural-postprocessor": "3.0.0",
     "i18next-node-fs-backend": "2.1.3",
@@ -59,7 +59,7 @@
     "jsonwebtoken": "8.5.1",
     "leaflet": "1.7.1",
     "luxon": "2.3.1",
-    "marked": "4.0.13",
+    "marked": "4.0.14",
     "mime-types": "2.1.35",
     "mongodb": "4.5.0",
     "morgan": "1.10.0",
@@ -88,12 +88,11 @@
     "tinygradient": "1.1.5",
     "useragent": "2.3.0",
     "uuid": "8.3.2",
-    "winston": "2.4.2",
-    "winston-config": "0.5.1"
+    "winston": "3.7.2"
   },
   "devDependencies": {
     "ajv": "8.11.0",
-    "grunt": "1.4.1",
+    "grunt": "1.5.2",
     "grunt-cli": "1.4.3",
     "grunt-contrib-clean": "2.0.0",
     "grunt-contrib-copy": "1.0.0",
@@ -107,7 +106,7 @@
     "grunt-puglint": "1.0.0",
     "grunt-sass": "3.1.0",
     "grunt-simple-nyc": "3.0.1",
-    "karma": "6.3.17",
+    "karma": "6.3.18",
     "karma-chrome-launcher": "3.1.1",
     "karma-coverage": "2.2.0",
     "karma-html2js-preprocessor": "1.1.0",
@@ -120,7 +119,7 @@
     "proxyquire": "2.1.3",
     "puppeteer": "13.5.2",
     "sass": "1.50.0",
-    "sinon": "13.0.1",
+    "sinon": "13.0.2",
     "supertest": "6.2.2"
   },
   "scripts": {
