make mailsender escape receiver in test environments

--- a/config-examples/mailsender-config.json
+++ b/config-examples/mailsender-config.json
@@ -9,5 +9,6 @@
   },
   "sender-name": "Softwerkskammer Benachrichtigungen",
   "sender-address": "info@my-domain.org",
-  "include-footer": false
+  "include-footer": false,
+  "doNotSendMails": "insert email address here for local development as replacement for receivers"
 }
