--- a/.github/workflows/agora-ci.yml
+++ b/.github/workflows/agora-ci.yml
@@ -25,4 +25,4 @@ jobs:
           node-version: '18.x'
           cache: "yarn"
       - run: yarn install --immutable
-      - run: grunt
+      - run: yarn test
