--- a/.github/workflows/agora-ci.yml
+++ b/.github/workflows/agora-ci.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Use Node.js v18
         uses: actions/setup-node@v4
         with:
-          node-version: '18.x'
-          cache: "yarn"
+          node-version: 18.x
+          cache: yarn
       - run: yarn install --immutable
       - run: yarn test
