--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@popperjs/core": "2.11.8",
     "CoolBeans": "0.0.9",
     "awesome-bootstrap-checkbox": "1.0.1",
+    "better-sqlite3": "10.0.0",
     "body-parser": "1.20.2",
     "bootstrap": "5.3.3",
     "bootstrap-datepicker": "1.10.0",
