--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "agora",
   "description": "The platform for Softwerkskammer",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "author": "Andreas Leidig",
   "repository": {
     "type": "git",
@@ -10,7 +10,7 @@
   "license": "(MIT OR Apache-2.0)",
   "main": "",
   "engines": {
-    "node": ">=16.0"
+    "node": ">=18.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "6.5.2",
@@ -20,13 +20,13 @@
     "CoolBeans": "0.0.9",
     "awesome-bootstrap-checkbox": "1.0.1",
     "better-sqlite3": "10.0.0",
+    "better-sqlite3-session-store": "0.1.0",
     "body-parser": "1.20.2",
     "bootstrap": "5.3.3",
     "bootstrap-datepicker": "1.10.0",
     "bootstrap-markdown": "2.10.0",
     "compression": "1.7.4",
     "connect-ensure-login": "0.1.1",
-    "connect-mongo": "5.1.0",
     "cookie-parser": "1.4.6",
     "csurf": "1.11.0",
     "datatables.net": "2.0.3",
@@ -36,7 +36,6 @@
     "express-async-errors": "3.1.1",
     "express-session": "1.18.0",
     "feed": "4.2.2",
-    "full-icu": "1.5.0",
     "fullcalendar": "6.1.11",
     "glob": "10.3.12",
     "guillotine": "1.3.1",
@@ -96,7 +95,6 @@
     "grunt-eslint": "24.3.0",
     "grunt-karma": "4.0.2",
     "grunt-mocha-cli": "7.0.0",
-    "grunt-patcher": "1.0.0",
     "grunt-puglint": "1.0.0",
     "grunt-sass": "3.1.0",
     "grunt-simple-nyc": "3.0.1",
@@ -123,7 +121,7 @@
   },
   "scripts": {
     "deploy": "yarn prepare && grunt deploy_production",
-    "start": "node --icu-data-dir=node_modules/full-icu start-softwerkskammer",
+    "start": "node start-softwerkskammer",
     "test": "yarn prepare && grunt",
     "prepare": "git log -1 --pretty=\"format:a.dropdown-item.nav-link(href='https://github.com/softwerkskammer/Agora/commit/%H', target='_blank')%n i.fab.fa-github.fa-fw%n | &nbsp;Version: %h\" > softwerkskammer/version.pug"
   },
